# openapi-univ-korea

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
docs_readme/: timetable.md
kuapi/: apps.py  config.py  enums.py  exceptions.py  miscs.py  regexrs.py  url.py
kuapi/builders/: sugang.py
kuapi/clients/: portal.py  sugang.py
kuapi/enums/: sugang.py
kuapi/migrations/: 0001_initial.py
kuapi/models/: __init__.py  grw.py  sugang.py
kuapi/parsers/: sugang.py
kuapi/requesters/: gms.py  gmsportal.py  grw.py  portal.py  sugang.py
kuapi/tasks/: timetable.py
kuapi/testcase/: colleage.html  course.html  department.html  general_courses.html  general_first_type.html  general_second_type.html  group_noticelist.html  group_noticeview.html  major_courses.html
kuapi/tests/: test_gms.py  test_gmsportal.py  test_portal.py  test_sugang.py
