[metadata]
name = openapi-univ-korea
version = 1.0.0
description = 고려대학교 통합 API 패키지입니다.
long_description = file: README.rst
url = https://live2skull.kr
author = live2skull
author_email = live2skull@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2.11  
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = True
zip_safe = False
python_requires= >=3
packages=
    kuapi
install_requires=
    django==2.2.11
    djangorestframework==3.11.0